[package]
name = "fmt-gitflow-branch"
version = "0.1.0"
description = "Format a ticket number and summary into a Git branch name"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "branch", "ticket", "ticket-number", "gitflow"]
repository = "https://github.com/amjerm/branchify"
readme = "README.md"
include = ["src/**/*rs", "Cargo.toml", "LICENSE"]
edition = "2021"
license = "MIT"

[dependencies]
regex = "1"
